# Mask-RCNN-mmdetection

./: CMakeCache.txt  README.md  README_zhCN.md  checkpoints_modify.py  config.md  onnx_inference.py  requirements.md  test.txt  video_demo.py  view_pth.py
_base_/models/: mask_rcnn_r50_fpn.py
common/: mstrain-poly_3x_coco_instance.py
deployment/: test.py
inference_C++/: CMakeLists.txt  config.md  runDet.cpp
inference_C++/include/: gridSample.cpp  roi_align.cpp
